gitops/apps/analytics-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service
  namespace: analytics-service
  labels:
    app: analytics-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics-service
  template:
    metadata:
      labels:
        app: analytics-service
    spec:
      serviceAccountName: analytics-service
      containers:
        - name: analytics-service
          image: 681447159486.dkr.ecr.us-east-1.amazonaws.com/analytics-service:v1.0.0-8b90981
          ports:
            - containerPort: 8005
          readinessProbe:
            httpGet:
              path: /health
              port: 8005
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8005
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  namespace: analytics-service
spec:
  type: ClusterIP
  ports:
    - port: 8005
      targetPort: 8005
  selector:
    app: analytics-service
